samples/_failures_safe/1761242005_1acd04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15f57b08.c: In function ‘main’:
./samples/SAFE/__tmp_15f57b08.c:148:9: error: expected expression at end of input
  148 |         choice =
      |         ^~~~~~
./samples/SAFE/__tmp_15f57b08.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15f57b08.c:148:9: error: expected declaration or statement at end of input
